--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -214,6 +214,10 @@ section {
     padding: 80px 0;
 }
 
+section.main-content {
+    padding: 40px 0;
+}
+
 .section-header {
     text-align: center;
 }
@@ -386,7 +390,7 @@ footer li.signup-link a:hover {
 }
 
 /* ==== BLOG ====*/
-.post, .widget {
+.post, .widget, #comments {
     position: relative;
     border: solid 1px #ddd;
     background: white;
@@ -398,7 +402,8 @@ footer li.signup-link a:hover {
 
 .post header,
 .post .post-excerpt,
-.post .post-body {
+.post .post-body,
+#comments .comments-wrap {
     padding: 20px;
 }
 
@@ -496,6 +501,54 @@ footer li.signup-link a:hover {
     background-color: #8bc653;
 }
 
+#comments h3{
+    text-align: center;
+}
+
+#comments h4{
+    font-size: 1.3em;
+}
+
+#comments ol{
+    list-style: none;
+    padding:0;
+    margin:0;
+}
+
+#comments ol li{
+    background: rgba(0,0,0,0.02);
+    padding: 10px 20px;
+    margin: 10px 0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border:solid 1px rgba(0,0,0,0.03);
+}
+
+#comments ol li ol.children{
+    padding: 0;
+    list-style: none;
+    font-size: 0.96em;
+}
+
+#leave-comment {
+    margin: 40px 0 0;
+    padding: 20px 0 0;
+    border-top: solid 1px #eeeeee;
+}
+
+/*RESOURCES*/
+
+.resource{
+    width:31.33333333%;
+    float: left;
+    margin: 0 3% 40px 0;
+}
+
+.resource:nth-child(3n){
+    margin-right: 0;
+}
+
 /* ==== CUSTOM ICON SPRITES ====*/
 
 i.ci {
@@ -575,6 +628,12 @@ textarea {
     #featurette iframe {
         height: 240px;
     }
+
+    .resource{
+        width: 48%;
+        margin-right: 2%;
+        min-height:800px;
+    }
 }
 
 @media screen and (max-width: 568px) {
@@ -586,5 +645,11 @@ textarea {
 
     #instructor .num span {
         font-size: 16px;
+    }
+
+    .resource{
+        width: 100%;
+        margin-right: 0;
+        min-height:0;
     }
 }
